fixed blog container alignment

--- a/src/components/blog/blog.css
+++ b/src/components/blog/blog.css
@@ -1,5 +1,6 @@
 .posts_container{
     display: flex;
+    flex-direction: column;
     justify-content: center;
-    align-content: center;
+    align-items: center;
 }
